# DataEngineeringTraining

./: green_tripdata_2025-11.parquet  pyproject.toml  taxi_zone_lookup.parquet
DataTalk_Course/: data_ingest.ipynb
DataTalk_Course/01-docker-terraform/2_docker_sql/: Dockerfile  Guide.py  README.md  ingest_data.py  pipeline.py  upload-data.ipynb  upload-data.py
PySpark/: PySpark_MySQL.py
