[project]
name = "data-engineering-training"
version = "0.1.0"
description = "Data Engineering Training"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "psycopg[binary,pool]>=3.3.3",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
